Opened 11 years ago

Closed 11 years ago

#10042 closed bug (fixed)

x86 DEBUG builds are failing since PM merge

Reported by: umccullough Owned by: pdziepak
Priority: normal Milestone: R1
Component: Build System Version: R1/Development
Keywords: debug link addattr Cc:
Blocked By: Blocking:
Platform: All

Description

Since the package management merge, the x86 DEBUG builds are failing. The last successful DEBUG=1 build that our buildslaves were able to perform was with hrev46110.

Buildbot slaves uses the following to test the DEBUG builds:

jam -q -sDEBUG=1 -sHAIKU_IMAGE_NAME=haiku-debug.image -sHAIKU_IMAGE_SIZE=1524 @image

There appears to be a linking issue with addattr, as seen at the bottom of the buildbot output:

http://mmadia.dyndns.org:8010/builders/x86-debug-any-host/builds/1923/steps/%5Bx86gcc2%5D-debug/logs/stdio

MergeObjectFromObjects1 /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/build/libbe/support/support_kit.o 
Link /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib/libbe_build.so 
Chmod1 /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib/libbe_build.so 
Link /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/addattr 
/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib/libbe_build.so: undefined reference to `_get_thread_info'
collect2: ld returned 1 exit status

export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib ; /work/haiku/slave2/haiku/build/scripts/rm_attrs /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/release/tools/rm_attrs -f "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/addattr"
cc -Xlinker --no-as-needed -lm -o "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/addattr"   "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/main.o" "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/addAttr.o" \
"/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/build/libroot/libroot_build_function_remapper.a" "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib/libroot_build.so" "/work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/lib/libbe_build.so" -lstdc++ -lsupc++  \


...failed Link /work/haiku/slave2/x86-debug-any-host/generated.x86gcc2-debug/objects/linux/x86_64/debug_1/tools/addattr/addattr ...

Change History (3)

comment:1 by pdziepak, 11 years ago

hrev46155 fixes one of the issues causing this problem.

comment:2 by pdziepak, 11 years ago

Owner: changed from bonefish to pdziepak
Status: newassigned

...and hrev46156 fixes it completely.

comment:3 by pdziepak, 11 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.